--- a/index.html
+++ b/index.html
@@ -2,181 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OTT WALLAH — India's Cheapest OTT Store</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OTT WALLAH — Premium OTT & Courses</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 
   <style>
     body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #000;
-      color: #fff;
+      margin: 0; font-family: "Poppins", sans-serif;
+      background: #000; color: #fff;
     }
 
     /* NAVBAR */
     .navbar {
-      width: 100%;
-      padding: 20px 40px;
-      background: #0d0d0d;
-      border-bottom: 1px solid rgba(255,0,0,0.3);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      padding: 22px 40px; background: #0d0d0d; border-bottom: 1px solid rgba(255,0,0,.3);
+      display: flex; justify-content: space-between; align-items: center;
+      position: sticky; top: 0; z-index: 999;
     }
-    .logo {
-      font-size: 26px;
-      font-weight: 700;
-      color: #ff0000;
-      letter-spacing: 1px;
-      display:flex;
-      align-items:center;
-      gap:8px;
-    }
-    .logo i {
-      font-size: 30px;
-      color: #fff;
-    }
-
+    .logo { font-size: 30px; color:#ff0000; font-weight:800; display:flex; gap:8px; align-items:center }
+    .logo span { color: #fff; }
     .nav-links a {
-      margin-left: 20px;
-      color: #ccc;
-      text-decoration: none;
-      font-weight: 500;
-      transition: .3s;
+      margin-left: 25px; color:#ccc; text-decoration:none; font-size:16px; font-weight:500;
     }
-    .nav-links a:hover {
-      color: #ff0000;
-    }
-
+    .nav-links a:hover { color:#ff0000; }
     .contact-btn {
-      background: #ff0000;
-      padding: 10px 18px;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 600;
+      background:#ff0000; padding:10px 18px; border-radius:6px; text-decoration:none; color:#fff; font-weight:700;
     }
 
     /* HERO */
     .hero {
-      width: 100%;
-      padding: 60px 20px;
-      background: url('/uploads/banner1.png') center/cover no-repeat fixed;
-      text-align: center;
+      background: url('/uploads/banner1.png') center/cover no-repeat;
+      padding:120px 20px; text-align:center;
     }
     .hero h1 {
-      font-size: 42px;
-      font-weight: 800;
-      line-height: 1.3;
-      text-shadow: 0 0 15px #000;
+      font-size:46px; font-weight:900; max-width:800px; margin:auto; line-height:1.3;
     }
-    .hero span {
-      color: #ff0000;
-    }
-    .hero p {
-      margin-top: 10px;
-      font-size: 18px;
-      color: #ccc;
-    }
+    .hero span { color:#ff0000; }
+    .hero p { font-size:20px; color:#ccc; margin-top:15px; }
+    .hero-btns { margin-top:30px; display:flex; justify-content:center; gap:15px; }
+    .btn { padding:14px 26px; border-radius:6px; font-size:16px; cursor:pointer; text-decoration:none; }
+    .btn-red { background:#ff0000; color:#fff; font-weight:700; }
+    .btn-dark { background:#111; color:#fff; border:1px solid #333; }
 
-    .hero-buttons {
-      margin-top: 25px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
+    /* BIG CATEGORIES */
+    .big-cats {
+      padding:60px 20px; text-align:center;
     }
-    .btn {
-      padding: 12px 22px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      border: none;
-      text-decoration:none;
+    .section-title {
+      font-size:36px; font-weight:800; color:#ff0000; margin-bottom:40px;
     }
-    .btn-primary {
-      background: #ff0000;
-      color: #fff;
-      font-weight:700;
+    .cat-grid {
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:30px; padding:0 20px;
     }
-    .btn-dark {
-      background: #111;
-      color: #fff;
-      font-weight:600;
-      border:1px solid #333;
+    .cat-box {
+      background:#111; padding:20px; border-radius:15px; border:1px solid #222;
+      transition:.3s; cursor:pointer;
     }
+    .cat-box:hover { border-color:#ff0000; transform:translateY(-6px); }
+    .cat-box img { width:100%; border-radius:10px; }
+    .cat-box h3 { margin:15px 0; font-size:22px; }
 
-    /* SECTION */
-    .section {
-      padding: 50px 20px;
-      text-align: center;
+    /* CUSTOMER REVIEWS */
+    .reviews {
+      margin-top:60px; padding:60px 20px; background:#0d0d0d; text-align:center;
     }
-    .section h2 {
-      font-size: 32px;
-      margin-bottom: 20px;
-      color: #ff0000;
+    .review-slider {
+      display:flex; overflow-x:auto; gap:20px; padding:20px 0;
+      scroll-snap-type:x mandatory;
     }
+    .review-card {
+      min-width:280px; max-width:280px;
+      background:#111; padding:20px; border-radius:15px; border:1px solid #222; scroll-snap-align:start;
+    }
+    .review-card p { color:#ccc; font-size:15px; }
+    .review-stars i { color:#ff0000; margin-top:8px; }
 
-    /* CARDS */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 20px;
-      padding: 0 20px;
+    /* DELIVERY */
+    .delivery {
+      padding:60px 20px; text-align:center;
     }
-
-    .card {
-      background: #111;
-      border:1px solid #222;
-      padding:15px;
-      border-radius:10px;
-      transition:.3s;
-      cursor:pointer;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      border:1px solid #ff0000;
-      box-shadow:0 0 20px rgba(255,0,0,0.3);
-    }
-    .card img {
-      width: 100%;
-      border-radius:8px;
-      margin-bottom:10px;
-    }
-    .card p {
-      font-size: 16px;
-      font-weight: 600;
-    }
-
-    .buy-btn {
-      margin-top:10px;
-      display:inline-block;
-      padding:8px 12px;
-      background:#ff0000;
-      color:#fff;
-      border-radius:6px;
-      font-size:14px;
-      text-decoration:none;
-      font-weight:600;
-    }
+    .delivery p { font-size:20px; color:#bbb; max-width:600px; margin:auto; }
 
     /* FOOTER */
     footer {
-      text-align: center;
-      padding: 30px;
-      background: #0d0d0d;
-      border-top:1px solid rgba(255,0,0,0.3);
-      margin-top:50px;
+      padding:40px 20px; background:#0d0d0d; border-top:1px solid rgba(255,0,0,.2);
+      text-align:center;
     }
-    footer p {
-      color:#888;
-      font-size:14px;
-    }
+    footer h3 { color:#ff0000; }
+    footer p { color:#aaa; }
   </style>
 </head>
 
@@ -184,103 +98,110 @@
 
 <!-- NAVBAR -->
 <div class="navbar">
-  <div class="logo">
-    <i class="ri-clapperboard-fill"></i> OTT <span style="color:white">WALLAH</span>
-  </div>
-
+  <div class="logo"><i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span></div>
   <div class="nav-links">
     <a href="#ott">OTT Apps</a>
     <a href="#courses">Courses</a>
     <a href="#tools">Editing Tools</a>
-    <a href="#faq">FAQ</a>
   </div>
-
   <a href="https://wa.me/919837777006" class="contact-btn">Contact</a>
 </div>
 
 <!-- HERO -->
 <section class="hero">
-  <h1>India's Cheapest <span>OTT</span> & <span>Course</span> Marketplace</h1>
-  <p>Get Premium Plans at 90% Discount • 100% Safe • Instant Delivery</p>
-
-  <div class="hero-buttons">
-    <a href="#ott" class="btn btn-primary">Explore Now</a>
-    <a href="#courses" class="btn btn-dark">View Courses</a>
+  <h1>India’s Cheapest <span>OTT</span> & <span>Courses</span> Marketplace</h1>
+  <p>Premium plans at 99% discount • 100% secure • Instant delivery</p>
+  <div class="hero-btns">
+    <a href="#ott" class="btn btn-red">Explore OTT</a>
+    <a href="#courses" class="btn btn-dark">Browse Courses</a>
   </div>
 </section>
 
-<!-- TRENDING OTT -->
-<section class="section" id="ott">
-  <h2>🔥 Trending OTT Plans</h2>
+<!-- BIG CATEGORIES -->
+<section class="big-cats" id="ott">
+  <h2 class="section-title">🔥 Mega OTT Offers</h2>
+  <div class="cat-grid">
 
-  <div class="grid">
-    <div class="card">
+    <div class="cat-box">
       <img src="/uploads/Netflix.png">
-      <p>Netflix Premium</p>
-      <a class="buy-btn" onclick="openOrderModal('Netflix Premium')">Buy Now</a>
+      <h3>Netflix Premium</h3>
+      <a class="btn btn-red" onclick="openOrderModal('Netflix Premium')">Buy Now</a>
     </div>
 
-    <div class="card">
+    <div class="cat-box">
       <img src="/uploads/Hotstar.png">
-      <p>Disney Hotstar</p>
-      <a class="buy-btn" onclick="openOrderModal('Hotstar Premium')">Buy Now</a>
+      <h3>Hotstar Premium</h3>
+      <a class="btn btn-red" onclick="openOrderModal('Hotstar Premium')">Buy Now</a>
     </div>
 
-    <div class="card">
+    <div class="cat-box">
       <img src="/uploads/AmazonPrime.png">
-      <p>Amazon Prime</p>
-      <a class="buy-btn" onclick="openOrderModal('Prime Video')">Buy Now</a>
-    </div>
-
-    <div class="card">
-      <img src="/uploads/Zee5.png">
-      <p>ZEE5 Premium</p>
-      <a class="buy-btn" onclick="openOrderModal('ZEE5 Premium')">Buy Now</a>
+      <h3>Amazon Prime</h3>
+      <a class="btn btn-red" onclick="openOrderModal('Prime Video')">Buy Now</a>
     </div>
   </div>
 </section>
 
 <!-- COURSES -->
-<section class="section" id="courses">
-  <h2>📚 Premium Courses</h2>
-
-  <div class="grid">
-    <div class="card">
-      <img src="/uploads/Course1.png">
-      <p>Graphic Designing Full Course</p>
-      <a class="buy-btn" onclick="openOrderModal('Graphic Design Course')">Buy Now</a>
-    </div>
-
-    <div class="card">
-      <img src="/uploads/Course2.png">
-      <p>Video Editing Mastery</p>
-      <a class="buy-btn" onclick="openOrderModal('Video Editing Mastery')">Buy Now</a>
-    </div>
-
-    <div class="card">
-      <img src="/uploads/Course3.png">
-      <p>Freelancing Masterclass</p>
-      <a class="buy-btn" onclick="openOrderModal('Freelancing Masterclass')">Buy Now</a>
-    </div>
+<section class="big-cats" id="courses">
+  <h2 class="section-title">📚 Popular Courses</h2>
+  <div class="cat-grid">
+    <div class="cat-box"><img src="/uploads/Course1.png"><h3>Graphic Designing</h3><a class="btn btn-red" onclick="openOrderModal('Graphic Designing Course')">Buy Now</a></div>
+    <div class="cat-box"><img src="/uploads/Course2.png"><h3>Video Editing Mastery</h3><a class="btn btn-red" onclick="openOrderModal('Video Editing Mastery')">Buy Now</a></div>
+    <div class="cat-box"><img src="/uploads/Course3.png"><h3>Freelancing Masterclass</h3><a class="btn btn-red" onclick="openOrderModal('Freelancing Masterclass')">Buy Now</a></div>
   </div>
 </section>
 
 <!-- TOOLS -->
-<section class="section" id="tools">
-  <h2>🛠 Editing Tools</h2>
-
-  <div class="grid">
-    <div class="card"><img src="/uploads/Capcut.png"><p>CapCut Pro Templates</p><a class="buy-btn" onclick="openOrderModal('Capcut Pro')">Buy Now</a></div>
-    <div class="card"><img src="/uploads/Premiere.png"><p>Premiere Pro Presets</p><a class="buy-btn" onclick="openOrderModal('Premiere Presets')">Buy Now</a></div>
-    <div class="card"><img src="/uploads/AE.png"><p>After Effects Packs</p><a class="buy-btn" onclick="openOrderModal('AE Packs')">Buy Now</a></div>
+<section class="big-cats" id="tools">
+  <h2 class="section-title">🛠 Editing Tools</h2>
+  <div class="cat-grid">
+    <div class="cat-box"><img src="/uploads/Capcut.png"><h3>Capcut Pro</h3><a class="btn btn-red" onclick="openOrderModal('Capcut Pro')">Buy Now</a></div>
+    <div class="cat-box"><img src="/uploads/Premiere.png"><h3>Premiere Pro Presets</h3><a class="btn btn-red" onclick="openOrderModal('Premiere Presets')">Buy Now</a></div>
+    <div class="cat-box"><img src="/uploads/AE.png"><h3>After Effects Packs</h3><a class="btn btn-red" onclick="openOrderModal('AE Packs')">Buy Now</a></div>
   </div>
+</section>
+
+<!-- CUSTOMER REVIEWS -->
+<section class="reviews">
+  <h2 class="section-title">🌟 Customer Reviews</h2>
+
+  <div class="review-slider">
+
+    <div class="review-card">
+      <p>"Netflix plan instantly mil gaya. 5 min me login aa gaya!"</p>
+      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+    </div>
+
+    <div class="review-card">
+      <p>"Courses top quality at cheapest price. Loved it."</p>
+      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+    </div>
+
+    <div class="review-card">
+      <p>"Very trustworthy seller. Instant support on WhatsApp."</p>
+      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+    </div>
+
+  </div>
+</section>
+
+<!-- DELIVERY -->
+<section class="delivery">
+  <h2 class="section-title">🚚 Delivery Across India</h2>
+  <p>We deliver OTT plans, courses and tools instantly across any location in India.  
+  No waiting — get instant access!</p>
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 OTT WALLAH • All Rights Reserved</p>
+  <h3>OTT WALLAH — Support</h3>
+  <p>Email: rajsarswata1@gmail.com</p>
+  <p>WhatsApp: +91 9837777006</p>
+  <p>© 2025 OTT WALLAH — All Rights Reserved</p>
 </footer>
+
+<script src="app.js"></script>
 
 </body>
 </html>
-
