--- a/index.html
+++ b/index.html
@@ -2,95 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OTT WALLAH — Premium OTT & Courses</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 
   <style>
-    body {
-      margin: 0; font-family: "Poppins", sans-serif;
-      background: #000; color: #fff;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; font-family:"Poppins", sans-serif; }
+    body { background:#000; color:#fff; }
 
     /* NAVBAR */
     .navbar {
-      padding: 22px 40px; background: #0d0d0d; border-bottom: 1px solid rgba(255,0,0,.3);
-      display: flex; justify-content: space-between; align-items: center;
-      position: sticky; top: 0; z-index: 999;
+      padding:20px 40px; background:#0d0d0d; border-bottom:1px solid rgba(255,0,0,.3);
+      display:flex; justify-content:space-between; align-items:center;
+      position:sticky; top:0; z-index:999;
     }
-    .logo { font-size: 30px; color:#ff0000; font-weight:800; display:flex; gap:8px; align-items:center }
-    .logo span { color: #fff; }
+    .logo { font-size:32px; font-weight:900; color:#ff0000; display:flex; gap:10px; align-items:center; }
+    .logo span { color:#fff; }
     .nav-links a {
-      margin-left: 25px; color:#ccc; text-decoration:none; font-size:16px; font-weight:500;
+      margin-left:25px; color:#ccc; text-decoration:none; font-size:17px; font-weight:500;
     }
     .nav-links a:hover { color:#ff0000; }
     .contact-btn {
-      background:#ff0000; padding:10px 18px; border-radius:6px; text-decoration:none; color:#fff; font-weight:700;
+      background:#ff0000; padding:10px 18px; border-radius:6px;
+      color:#fff; text-decoration:none; font-weight:700;
     }
 
-    /* HERO */
+    /* HERO BANNER */
     .hero {
-      background: url('/uploads/banner1.png') center/cover no-repeat;
-      padding:120px 20px; text-align:center;
+      background:url("/uploads/banner1.png") center/cover no-repeat;
+      padding:150px 20px; text-align:center;
     }
     .hero h1 {
-      font-size:46px; font-weight:900; max-width:800px; margin:auto; line-height:1.3;
+      font-size:50px; font-weight:900; max-width:900px; margin:auto;
+      text-shadow:0 0 20px #000;
     }
     .hero span { color:#ff0000; }
-    .hero p { font-size:20px; color:#ccc; margin-top:15px; }
+    .hero p { margin-top:15px; font-size:20px; color:#ccc; }
     .hero-btns { margin-top:30px; display:flex; justify-content:center; gap:15px; }
-    .btn { padding:14px 26px; border-radius:6px; font-size:16px; cursor:pointer; text-decoration:none; }
-    .btn-red { background:#ff0000; color:#fff; font-weight:700; }
+    .btn { padding:14px 26px; border-radius:6px; text-decoration:none; font-size:17px; font-weight:700; }
+    .btn-red { background:#ff0000; color:#fff; }
     .btn-dark { background:#111; color:#fff; border:1px solid #333; }
 
-    /* BIG CATEGORIES */
-    .big-cats {
-      padding:60px 20px; text-align:center;
-    }
-    .section-title {
-      font-size:36px; font-weight:800; color:#ff0000; margin-bottom:40px;
-    }
+    /* BIG CATEGORY BOXES */
+    .big-section { padding:80px 20px; text-align:center; }
+    .section-title { font-size:38px; font-weight:900; color:#ff0000; margin-bottom:40px; }
+    
     .cat-grid {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:30px; padding:0 20px;
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+      gap:30px; padding:0 40px;
     }
+
     .cat-box {
-      background:#111; padding:20px; border-radius:15px; border:1px solid #222;
-      transition:.3s; cursor:pointer;
+      background:#111; border-radius:20px; padding:20px; cursor:pointer;
+      transition:.3s; border:1px solid #222;
     }
-    .cat-box:hover { border-color:#ff0000; transform:translateY(-6px); }
-    .cat-box img { width:100%; border-radius:10px; }
-    .cat-box h3 { margin:15px 0; font-size:22px; }
+    .cat-box:hover { transform:translateY(-8px); border-color:#ff0000; }
+    .cat-box img { width:100%; border-radius:16px; }
+    .cat-box h3 { margin-top:15px; font-size:24px; font-weight:700; }
 
-    /* CUSTOMER REVIEWS */
-    .reviews {
-      margin-top:60px; padding:60px 20px; background:#0d0d0d; text-align:center;
-    }
-    .review-slider {
-      display:flex; overflow-x:auto; gap:20px; padding:20px 0;
-      scroll-snap-type:x mandatory;
-    }
+    /* REVIEWS */
+    .reviews { padding:70px 20px; background:#0d0d0d; text-align:center; }
+    .review-slider { display:flex; overflow-x:auto; gap:20px; padding:20px; }
     .review-card {
-      min-width:280px; max-width:280px;
-      background:#111; padding:20px; border-radius:15px; border:1px solid #222; scroll-snap-align:start;
+      min-width:280px; background:#111; padding:20px; border-radius:15px;
+      border:1px solid #222;
     }
-    .review-card p { color:#ccc; font-size:15px; }
-    .review-stars i { color:#ff0000; margin-top:8px; }
+    .review-stars i { color:#ff0000; }
 
-    /* DELIVERY */
-    .delivery {
-      padding:60px 20px; text-align:center;
-    }
-    .delivery p { font-size:20px; color:#bbb; max-width:600px; margin:auto; }
+    /* DELIVERY SECTION */
+    .delivery { padding:60px 20px; text-align:center; }
+    .delivery p { font-size:20px; color:#ccc; max-width:600px; margin:auto; }
 
     /* FOOTER */
-    footer {
-      padding:40px 20px; background:#0d0d0d; border-top:1px solid rgba(255,0,0,.2);
-      text-align:center;
-    }
-    footer h3 { color:#ff0000; }
-    footer p { color:#aaa; }
+    footer { padding:50px 20px; background:#0d0d0d; text-align:center; border-top:1px solid rgba(255,0,0,.3); }
+    footer h3 { color:#ff0000; font-size:24px; }
+    footer p { color:#999; margin-top:8px; }
   </style>
 </head>
 
@@ -99,66 +87,48 @@
 <!-- NAVBAR -->
 <div class="navbar">
   <div class="logo"><i class="ri-clapperboard-fill"></i> OTT <span>WALLAH</span></div>
+
   <div class="nav-links">
-    <a href="#ott">OTT Apps</a>
-    <a href="#courses">Courses</a>
-    <a href="#tools">Editing Tools</a>
+    <a href="ott.html">OTT Apps</a>
+    <a href="courses.html">Courses</a>
+    <a href="editing.html">Editing Tools</a>
   </div>
+
   <a href="https://wa.me/919837777006" class="contact-btn">Contact</a>
 </div>
 
 <!-- HERO -->
 <section class="hero">
-  <h1>India’s Cheapest <span>OTT</span> & <span>Courses</span> Marketplace</h1>
-  <p>Premium plans at 99% discount • 100% secure • Instant delivery</p>
+  <h1>India’s Most Premium <span>OTT</span> & <span>Courses</span> Marketplace</h1>
+  <p>Get Premium Plans at 90% Discount • Instant Access • Trusted by 12,000+ Users</p>
+
   <div class="hero-btns">
-    <a href="#ott" class="btn btn-red">Explore OTT</a>
-    <a href="#courses" class="btn btn-dark">Browse Courses</a>
+    <a href="ott.html" class="btn btn-red">Explore OTT</a>
+    <a href="courses.html" class="btn btn-dark">Browse Courses</a>
   </div>
 </section>
 
 <!-- BIG CATEGORIES -->
-<section class="big-cats" id="ott">
-  <h2 class="section-title">🔥 Mega OTT Offers</h2>
+<section class="big-section">
+  <h2 class="section-title">🔥 Top Categories</h2>
+
   <div class="cat-grid">
 
-    <div class="cat-box">
-      <img src="/uploads/Netflix.png">
-      <h3>Netflix Premium</h3>
-      <a class="btn btn-red" onclick="openOrderModal('Netflix Premium')">Buy Now</a>
+    <div class="cat-box" onclick="location.href='ott.html'">
+      <img src="/uploads/bannerOTT.png">
+      <h3>OTT Apps • Netflix • Prime • Hotstar</h3>
     </div>
 
-    <div class="cat-box">
-      <img src="/uploads/Hotstar.png">
-      <h3>Hotstar Premium</h3>
-      <a class="btn btn-red" onclick="openOrderModal('Hotstar Premium')">Buy Now</a>
+    <div class="cat-box" onclick="location.href='courses.html'">
+      <img src="/uploads/Course1.png">
+      <h3>Courses • Editing • Freelancing</h3>
     </div>
 
-    <div class="cat-box">
-      <img src="/uploads/AmazonPrime.png">
-      <h3>Amazon Prime</h3>
-      <a class="btn btn-red" onclick="openOrderModal('Prime Video')">Buy Now</a>
+    <div class="cat-box" onclick="location.href='editing.html'">
+      <img src="/uploads/Capcut.png">
+      <h3>Editing Tools • Capcut • AE • Premiere</h3>
     </div>
-  </div>
-</section>
 
-<!-- COURSES -->
-<section class="big-cats" id="courses">
-  <h2 class="section-title">📚 Popular Courses</h2>
-  <div class="cat-grid">
-    <div class="cat-box"><img src="/uploads/Course1.png"><h3>Graphic Designing</h3><a class="btn btn-red" onclick="openOrderModal('Graphic Designing Course')">Buy Now</a></div>
-    <div class="cat-box"><img src="/uploads/Course2.png"><h3>Video Editing Mastery</h3><a class="btn btn-red" onclick="openOrderModal('Video Editing Mastery')">Buy Now</a></div>
-    <div class="cat-box"><img src="/uploads/Course3.png"><h3>Freelancing Masterclass</h3><a class="btn btn-red" onclick="openOrderModal('Freelancing Masterclass')">Buy Now</a></div>
-  </div>
-</section>
-
-<!-- TOOLS -->
-<section class="big-cats" id="tools">
-  <h2 class="section-title">🛠 Editing Tools</h2>
-  <div class="cat-grid">
-    <div class="cat-box"><img src="/uploads/Capcut.png"><h3>Capcut Pro</h3><a class="btn btn-red" onclick="openOrderModal('Capcut Pro')">Buy Now</a></div>
-    <div class="cat-box"><img src="/uploads/Premiere.png"><h3>Premiere Pro Presets</h3><a class="btn btn-red" onclick="openOrderModal('Premiere Presets')">Buy Now</a></div>
-    <div class="cat-box"><img src="/uploads/AE.png"><h3>After Effects Packs</h3><a class="btn btn-red" onclick="openOrderModal('AE Packs')">Buy Now</a></div>
   </div>
 </section>
 
@@ -167,30 +137,33 @@
   <h2 class="section-title">🌟 Customer Reviews</h2>
 
   <div class="review-slider">
-
     <div class="review-card">
-      <p>"Netflix plan instantly mil gaya. 5 min me login aa gaya!"</p>
-      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+      <p>“Netflix plan instantly mil gaya. Highly trusted seller!”</p>
+      <div class="review-stars">
+        <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i>
+      </div>
     </div>
 
     <div class="review-card">
-      <p>"Courses top quality at cheapest price. Loved it."</p>
-      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+      <p>“Courses quality top class, and price unbelievable low!”</p>
+      <div class="review-stars">
+        <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i>
+      </div>
     </div>
 
     <div class="review-card">
-      <p>"Very trustworthy seller. Instant support on WhatsApp."</p>
-      <div class="review-stars"><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+      <p>“Very supportive, fast WhatsApp response!”</p>
+      <div class="review-stars">
+        <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i>
+      </div>
     </div>
-
   </div>
 </section>
 
-<!-- DELIVERY -->
+<!-- DELIVERY SECTION -->
 <section class="delivery">
   <h2 class="section-title">🚚 Delivery Across India</h2>
-  <p>We deliver OTT plans, courses and tools instantly across any location in India.  
-  No waiting — get instant access!</p>
+  <p>We deliver OTT plans, courses and tools instantly in ANY location across India — 24/7 fast delivery guaranteed.</p>
 </section>
 
 <!-- FOOTER -->
@@ -205,3 +178,4 @@
 
 </body>
 </html>
+
