--- a/ott.html
+++ b/ott.html
@@ -2,142 +2,130 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>OTT Platforms — OTT Wallah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css">
+  <title>OTT WALLAH — OTT Apps</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
   <style>
-    .page-hero{
-      padding:60px 20px 20px;
-      text-align:center;
+    body { background:#000; margin:0; font-family:Poppins, sans-serif; color:#fff; }
+    h1 { text-align:center; padding:30px 0; font-size:40px; color:#ff0000; font-weight:900; }
+
+    .grid {
+      padding:30px;
+      display:grid;
+      gap:25px;
+      grid-template-columns:repeat(auto-fit, minmax(220px, 1fr));
     }
-    .page-hero h1{
-      font-size:38px;
-      font-weight:900;
+
+    .card {
+      background:#111; padding:18px; border-radius:16px;
+      text-align:center; border:1px solid #222;
+      transition:.3s; cursor:pointer;
     }
-    .page-hero p{
-      opacity:.75;
-      max-width:700px;
-      margin:10px auto 0;
+
+    .card:hover {
+      transform:translateY(-8px);
+      border-color:#ff0000;
     }
+
+    img { width:100px; height:100px; object-fit:contain; }
+
+    .name { margin-top:12px; font-size:18px; font-weight:600; }
+    .price { margin-top:5px; color:#ff0000; font-weight:700; }
+
+    .btn-box { margin-top:15px; display:flex; justify-content:center; gap:10px; }
+    .btn {
+      padding:8px 14px; border-radius:6px; font-size:14px; font-weight:700; text-decoration:none;
+    }
+    .details { background:#222; color:#fff; }
+    .buy { background:#ff0000; color:#fff; }
+
   </style>
 </head>
-
 <body>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="container header-inner">
-    <div class="brand">
-      <div class="brand-badge">OW</div>
-      <div>
-        <div style="font-size:18px;font-weight:900;">OTT WALLAH</div>
-        <div class="small">Premium Streaming</div>
-      </div>
-    </div>
+<h1>🔥 Premium OTT Subscriptions</h1>
 
-    <div class="header-actions">
-      <a class="btn" href="index.html">Home</a>
-      <a class="btn" href="cart.html">Cart</a>
-      <a class="btn" href="login.html">Login</a>
+<div class="grid">
+
+  <!-- PRIME VIDEO -->
+  <div class="card">
+    <img src="/uploads/primevideo.png">
+    <div class="name">Prime Video</div>
+    <div class="price">₹99 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=primevideo" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
     </div>
   </div>
-</header>
 
-<!-- PAGE HERO -->
-<section class="page-hero">
-  <h1>OTT Platforms</h1>
-  <p>Explore 40+ OTT premium platforms — Netflix, Prime, Hotstar, SonyLIV, Zee5 & many more.</p>
-</section>
+  <!-- NETFLIX -->
+  <div class="card">
+    <img src="/uploads/netflix.png">
+    <div class="name">Netflix Premium</div>
+    <div class="price">₹149 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=netflix" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
 
-<!-- SEARCH + SORT -->
-<div class="container search-row">
-  <input id="q" class="input" placeholder="Search OTT platform...">
-  <select id="sort" class="filter">
-    <option value="rel">Featured</option>
-    <option value="lh">Price: Low → High</option>
-    <option value="hl">Price: High → Low</option>
-    <option value="az">Name: A → Z</option>
-  </select>
+  <!-- SONY LIV -->
+  <div class="card">
+    <img src="/uploads/sonyliv.png">
+    <div class="name">Sony LIV</div>
+    <div class="price">₹79 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=sonyliv" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
+
+  <!-- HOTSTAR -->
+  <div class="card">
+    <img src="/uploads/JioHotstar.png">
+    <div class="name">Hotstar</div>
+    <div class="price">₹89 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=hotstar" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
+
+  <!-- ZEE5 -->
+  <div class="card">
+    <img src="/uploads/zee5.png">
+    <div class="name">Zee5 Premium</div>
+    <div class="price">₹59 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=zee5" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
+
+  <!-- YOUTUBE PREMIUM -->
+  <div class="card">
+    <img src="/uploads/YouTubePremium.png">
+    <div class="name">YouTube Premium</div>
+    <div class="price">₹49 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=youtube" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
+
+  <!-- SPOTIFY -->
+  <div class="card">
+    <img src="/uploads/spotify.png">
+    <div class="name">Spotify Premium</div>
+    <div class="price">₹39 Only</div>
+    <div class="btn-box">
+      <a href="details.html?id=spotify" class="btn details">Details</a>
+      <a href="#" class="btn buy">Buy Now</a>
+    </div>
+  </div>
+
 </div>
-
-<!-- GRID -->
-<section class="container section">
-  <div id="grid" class="grid"></div>
-</section>
-
-<script src="./data.js"></script>
-<script>
-  const grid = document.getElementById("grid");
-  const q = document.getElementById("q");
-  const sort = document.getElementById("sort");
-
-  function cardHTML(item){
-    return `
-      <div class="card">
-        <span class="ribbon">OTT</span>
-        <img class="logo" src="${item.logo}">
-        <div class="title">${item.name}</div>
-        <div class="small">${item.tags.join(" • ")}</div>
-        <div class="price">₹${item.price}${item.billing}</div>
-        <div class="card-actions">
-          <a class="link" href="details.html?id=${item.id}">View details</a>
-          <button class="btn" onclick="addToCart('${item.id}')">Add to cart</button>
-        </div>
-      </div>
-    `;
-  }
-
-async function addToCart(id) {
-
-  // ✅ Check login using server session
-  let user = await fetch("/user").then(r => {
-    if (r.status === 401) return null;
-    return r.json();
-  });
-
-  // ✅ If not logged in → redirect
-  if (!user) {
-    window.location.href = "login.html";
-    return;
-  }
-
-  // ✅ Add to cart locally
-  let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-
-  if (!cart.find(x => x.id === id)) {
-    cart.push({ id, qty: 1 });
-  }
-
-  localStorage.setItem("cart", JSON.stringify(cart));
-
-  alert("Added to cart ✅");
-}
-
-
-  function render(list){
-    grid.innerHTML = list.map(cardHTML).join("");
-  }
-
-  function filter(){
-    let text = q.value.toLowerCase();
-    let list = window.CATALOG.filter(i => i.category=="ott");
-    list = list.filter(i => i.name.toLowerCase().includes(text));
-
-    switch(sort.value){
-      case "lh": list.sort((a,b)=>a.price-b.price); break;
-      case "hl": list.sort((a,b)=>b.price-a.price); break;
-      case "az": list.sort((a,b)=>a.name.localeCompare(b.name)); break;
-    }
-    render(list);
-  }
-
-  q.addEventListener("input", filter);
-  sort.addEventListener("change", filter);
-
-  render(window.CATALOG.filter(i=>i.category=="ott"));
-</script>
 
 </body>
 </html>
-
