Fix image extensions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     /* HERO BANNER */
     .hero {
-      background:url("/uploads/banner1.jpg") center/cover no-repeat;
+      background:url("/uploads/banner1.jpeg") center/cover no-repeat;
       padding:150px 20px; text-align:center;
     }
     .hero h1 {
@@ -115,17 +115,17 @@
   <div class="cat-grid">
 
     <div class="cat-box" onclick="location.href='ott.html'">
-      <img src="/uploads/bannerOTT.jpg">
+      <img src="/uploads/bannerOTT.jpeg">
       <h3>OTT Apps • Netflix • Prime • Hotstar</h3>
     </div>
 
     <div class="cat-box" onclick="location.href='courses.html'">
-      <img src="/uploads/Course1.jpg">
+      <img src="/uploads/Course1.jpeg">
       <h3>Courses • Editing • Freelancing</h3>
     </div>
 
     <div class="cat-box" onclick="location.href='editing.html'">
-      <img src="/uploads/Capcut.jpg">
+      <img src="/uploads/Capcut.jpeg">
       <h3>Editing Tools • Capcut • AE • Premiere</h3>
     </div>
 
@@ -192,7 +192,7 @@
       <p>Scan & Pay:</p>
 
       <!-- Your QR image from uploads folder -->
-      <img src="/uploads/QR.png" class="qr-img">
+      <img src="/uploads/QR.jpeg" class="qr-img">
 
       <p>OR Pay to UPI ID:</p>
       <div class="upi-id">**yourupi@okaxis**</div>
